<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="lucas.bicca.amazonrekognition.activity.CompareTwoImagesActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/activity_compare_two_images_left_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/activity_compare_two_images_container_padding">

                <ImageView
                    android:id="@+id/activity_compare_two_images_left_image"
                    android:layout_width="@dimen/activity_compare_two_image_image_square"
                    android:layout_height="@dimen/activity_compare_two_image_image_square"/>

                <Button
                    android:id="@+id/activity_compare_two_images_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_compare_two_images_capture"/>

                <Button
                    android:id="@+id/activity_compare_two_images_left_gallery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_compare_two_images_open_gallery"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_compare_two_images_right_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/activity_compare_two_images_container_padding">

                <ImageView
                    android:id="@+id/activity_compare_two_images_right_image"
                    android:layout_width="@dimen/activity_compare_two_image_image_square"
                    android:layout_height="@dimen/activity_compare_two_image_image_square"/>

                <Button
                    android:id="@+id/activity_compare_two_images_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_compare_two_images_capture"/>

                <Button
                    android:id="@+id/activity_compare_two_images_right_gallery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_compare_two_images_open_gallery"/>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/activity_compare_two_images_similarity"
            android:layout_width="@dimen/activity_compare_two_images_similarity"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:inputType="number"/>

        <Button
            android:id="@+id/activity_compare_two_images_compare_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_compare_two_images_compare"/>

        <TextView
            android:id="@+id/activity_compare_two_images_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</layout>
